# alba

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  cleaned_up_responses.xlsx  create_questions_answers.py  docker-compose.yaml  embeddings_comparison.py  evaluate.py  gunicorn.py  main.py  ner_comparison.py  ner_finetune.py  pyproject.toml
config/: config.json  config.py  false_positives.txt  locations.json
docker/: Dockerfile  docker-compose.yaml
evals/: create_questions_answers.py  embeddings_comparison.py  evaluate.py  evaluator.py
models/: bm25_model.pkl
src/: app.py  chatbot.py  database.py  document_engine.py  ner_extraction.py  response_engine.py
src/alba/: app.py  chatbot.py  config.py  container.py  database.py  document_engine.py  exceptions.py  milvus_database.py  models.py  repositories.py  response_engine.py  security.py  services.py
src/alba/chat/: __init__.py  router.py
src/alba/memory/: long_term_memory.py  short_term_memory.py
src/alba/router/: __init__.py  auth.py  chat.py  document.py
src/alba/templates/: template_manager.py
src/alba/utils/: create_locations_file.py  custom_file_splitter.py  ner_extraction.py  utils.py
src/alba_cli/: __main__.py  cli.py  database.py  document.py  logging.py  user.py
src/chat/: __init__.py  router.py
src/chatbot/: chatbot.py  document_engine.py  response_engine.py
src/chatbot/memory/: long_term_memory.py  short_term_memory.py
src/chatbot/templates/: template.json
src/cli/: __main__.py  cli.py  database.py
src/database/: database.py
src/database/schemas/: __init__.py  chunk.py  document.py
src/memory/: long_term_memory.py
src/templates/: template.json  template_manager.py
src/utils/: create_locations_file.py  custom_file_splitter.py  ner_extraction.py  test_ner_extraction.py  utils.py
