[tool.poetry]
name = "alba"
version = "0.1.0"
description = ""
authors = ["pablovazquezg <pablovazquezg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.1.13"
streamlit = "^1.32.2"
pymilvus = "^2.4.0"
milvus-model = "^0.1.0"
pymupdf = "^1.24.0"
ollama = "^0.1.8"
tqdm = "^4.66.2"
torch = "^2.2.2"
tenacity = "^8.2.3"
openai = "^1.23.1"
pandas = "^2.2.2"
openpyxl = "^3.1.2"
transformers = "^4.41.1"
spacy = "^3.7.4"
fpdf = "^1.7.2"
pypdf2 = "^3.0.1"
camelot-py = "^0.11.0"
opencv-python = "^4.10.0.82"
ghostscript = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
